unpackaged/main/default/objects/Booth_Upload__c/Booth_Upload__c.object-meta.xml
<CustomObject>
    <label>Booth Upload</label>
    <nameField>
        <displayFormat>BUP-{0000}</displayFormat>
        <label>Booth Upload Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booth Upload</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>