unpackaged/main/default/objects/Booth_Upload__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Opportunity needs to be an EMEA - Exhibition record</errorMessage>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>EMEA - Exhibition</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Booth Upload</relationshipLabel>
    <relationshipName>Booth_Upload</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>