unpackaged/main/default/objects/Booth_Upload__c/fields/Organiser_2__c.field-meta.xml
<CustomField>
    <fullName>Organiser_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organiser</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Please select the relevant organiser</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Firm</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Booth Upload</relationshipLabel>
    <relationshipName>Booth_Upload</relationshipName>
    <type>Lookup</type>
</CustomField>