unpackaged/main/default/objects/Booth_Upload__c/fields/Organiser__c.field-meta.xml
<CustomField>
    <fullName>Organiser__c</fullName>
    <label>Organiser DEL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>