unpackaged/main/default/objects/Booth_Upload__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete</fullName>
                <default>true</default>
                <label>Incomplete</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>