unpackaged/main/default/objects/Booth_Upload__c/listViews/Ajay_Uploads.listView-meta.xml
<ListView>
    <fullName>Ajay_Uploads</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Confirmation_Date_Time__c</columns>
    <columns>Number_of_Booths__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Organiser_2__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Ajay Modhvadia</value>
    </filters>
    <label>Ajay Uploads</label>
    <language>en_US</language>
</ListView>