unpackaged/main/default/objects/Booth_Upload__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Organiser_2__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Number_of_Booths__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>