unpackaged/main/default/objects/Booth_Upload__c/listViews/My_Open_Uploads.listView-meta.xml
<ListView>
    <fullName>My_Open_Uploads</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Organiser_2__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Incomplete</value>
    </filters>
    <label>My Open Uploads</label>
    <language>en_US</language>
</ListView>